Update dependencies; improve code